# ModelHub

./: .gitignore  Makefile  README.md  config.env  config.env.example  config.yaml  go.mod  go.sum
backend-go/: Makefile
backend-go/scripts/: load_env.sh
backend-rust/: .env.example  Cargo.toml  README.md
backend-rust/src/: main.rs
backend-rust/src/application/: mod.rs
backend-rust/src/config/: auth.rs  database.rs  mod.rs
backend-rust/src/domain/: mod.rs
backend-rust/src/domain/entities/: manufacturer.rs  mod.rs  model.rs  price_history.rs  user.rs  user_model_favorite.rs  user_model_purchase.rs
backend-rust/src/domain/models/: auth.rs  manufacturer_dto.rs  mod.rs  model_dto.rs
backend-rust/src/infrastructure/database/: connection.rs  mod.rs
backend-rust/src/infrastructure/repositories/: manufacturer_repository.rs  mod.rs  model_repository.rs  user_repository.rs
backend-rust/src/presentation/: state.rs
backend-rust/src/presentation/handlers/: auth.rs  manufacturer.rs  mod.rs  model.rs
backend-rust/src/presentation/middleware/: auth.rs  cors.rs  mod.rs
backend-rust/src/presentation/routes/: mod.rs
backend-rust/src/services/: auth_service.rs  manufacturer_service.rs  mod.rs  model_service.rs
docs/: API测试报告.md  a.json  前后端对接进展.md  前端调试指南.md  前端需求文档.md  开发总结.md  快速修复指南.md  快速诊断.md  登录问题修复.md  认证系统重构.md  设计风格更新.md  需求文档.md  项目完成总结.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
sql-script/: 01_init_database.sql  02_sample_data.sql  03_add_users.sql  05_manufacturer_examples.sql  07_check_constraints.sql
(+50 files in other folders)
